--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="16dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -25,7 +25,7 @@
         android:id="@+id/ivPokemon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:background="@drawable/charmander"
+        android:background="@drawable/charmander"
         android:contentDescription="Pokemon Imagem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +84,7 @@
             android:textColor="#FFFFFF"
             android:textSize="12sp"
             tools:text="Fire" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
