feat : pokemon api load

--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -23,9 +23,8 @@
 
     <ImageView
         android:id="@+id/ivPokemon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/charmander"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:contentDescription="Pokemon Imagem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,11 +66,11 @@
             android:id="@+id/tvType1"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:background="#fd7d24"
+            android:background="#a4acaf"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="#212121"
             android:textSize="12sp"
-            tools:text="Fire" />
+            tools:text="Type" />
 
         <TextView
             android:id="@+id/tvType2"
@@ -79,11 +78,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:background="#fd7d24"
+            android:background="#a4acaf"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="#212121"
             android:textSize="12sp"
-            tools:text="Fire" />
+            tools:text="Type" />
 
     </LinearLayout>
 
