--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -25,7 +25,7 @@
         android:id="@+id/ivPokemon"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:contentDescription="Pokemon Imagem"
+        android:contentDescription="@string/label_pokemon_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,11 +34,10 @@
         android:id="@+id/tvNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#919191"
-        android:textSize="14sp"
+        android:textColor="#212121"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.315"
-        app:layout_constraintStart_toStartOf="@+id/ivPokemon"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
         tools:text="Nº 001" />
 
@@ -48,25 +47,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="#313131"
-        android:textSize="24sp"
+        android:textSize="32sp"
+        android:fontFamily="@font/munro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNumber"
         tools:text="Charmander" />
 
     <LinearLayout
+        android:id="@+id/ll_types_pokemon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvName">
 
         <TextView
             android:id="@+id/tvType1"
             android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:background="#a4acaf"
+            android:layout_height="35dp"
+            tools:background="@drawable/poison"
             android:textAlignment="center"
             android:textColor="#212121"
             android:textSize="12sp"
@@ -75,10 +77,9 @@
         <TextView
             android:id="@+id/tvType2"
             android:layout_width="130dp"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="#a4acaf"
+            tools:background="@drawable/bug"
             android:textAlignment="center"
             android:textColor="#212121"
             android:textSize="12sp"
@@ -87,6 +88,4 @@
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.cardview.widget.CardView>
