--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bug">#C3316A38</color>
+    <color name="dragon">#E6215AAE</color>
+    <color name="electric">#C1FFCA04</color>
+    <color name="fight">#D3A1294F</color>
+    <color name="fire">#D7E4370C</color>
+    <color name="flying">#C1378BF3</color>
+    <color name="ghost">#C13F01CF</color>
+    <color name="grass">#C140C311</color>
+    <color name="ground">#E4A1894B</color>
+    <color name="ice">#C119FFDD</color>
+    <color name="normal">#C1444547</color>
+    <color name="poison">#C1924AC5</color>
+    <color name="psychic">#E4C22AEC</color>
+    <color name="rock">#BA502A0D</color>
+    <color name="water">#DF257FEC</color>
 </resources>
