--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -5,87 +5,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="7dp"
+    app:cardUseCompatPadding="true"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
-
-    <ImageView
-        android:id="@+id/ivPokemon"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:contentDescription="@string/label_pokemon_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvNumber"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#212121"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
-        tools:text="Nº 001" />
+        android:layout_marginBottom="8dp">
 
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="#313131"
-        android:textSize="32sp"
-        android:fontFamily="@font/munro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNumber"
-        tools:text="Charmander" />
-
-    <LinearLayout
-        android:id="@+id/ll_types_pokemon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvName">
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivPokemon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="5dp"
+            app:shapeAppearanceOverlay="@style/custom_image_view"
+            android:contentDescription="@string/label_pokemon_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/pikachu" />
 
         <TextView
-            android:id="@+id/tvType1"
-            android:layout_width="130dp"
-            android:layout_height="35dp"
-            tools:background="@drawable/poison"
-            android:textAlignment="center"
+            android:id="@+id/tvNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="#212121"
-            android:textSize="12sp"
-            tools:text="Type" />
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
+            tools:text="Nº 001" />
 
         <TextView
-            android:id="@+id/tvType2"
-            android:layout_width="130dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="10dp"
-            tools:background="@drawable/bug"
-            android:textAlignment="center"
-            android:textColor="#212121"
-            android:textSize="12sp"
-            tools:text="Type" />
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/munro"
+            android:textColor="#313131"
+            android:textSize="26sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvNumber"
+            tools:text="Charmander" />
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_types_pokemon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvName">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvType1"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:textAlignment="center"
+                android:textColor="#212121"
+                tools:background="@drawable/poison" />
+
+            <TextView
+                android:id="@+id/tvType2"
+                android:layout_width="60dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="10dp"
+                android:textAlignment="center"
+                android:textColor="#212121"
+                tools:background="@drawable/bug" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
